docs(Promise): 添加判断async函数的示例代码
添加两种判断函数是否为async函数的方法示例，使用constructor.name和Object.prototype.toString实现

--- a/docs/courses/3.Promise/4.async和await.md
+++ b/docs/courses/3.Promise/4.async和await.md
@@ -268,3 +268,24 @@ async function handleData() {
 - **async 函数返回 Promise**，await 表达式可以暂停函数执行，等待 Promise 解决
 - **await 只能在 async 函数中使用**，否则会报错
 - **async/await 可以与 Promise 方法结合使用**，实现更复杂的异步流程
+
+::: tip
+如何判断一个函数是 async 标记函数
+
+```javascript
+// 使用 constructor.name 判断
+// 原理：AsyncFunction 构造函数的 name 属性为 'AsyncFunction'
+function isAsyncFunction(func) {
+  return func.constructor.name === 'AsyncFunction';
+}
+// 或者 使用 Object.prototype.toString 判断
+// 原理：AsyncFunction 构造函数的 toString 方法返回 '[object AsyncFunction]'
+function isAsyncFunction(func) {
+  return Object.prototype.toString.call(func) === '[object AsyncFunction]';
+}
+
+console.log(isAsyncFunction(async function () {})); // true
+console.log(isAsyncFunction(function () {})); // false
+```
+
+:::
