docs(courses): 更新Promise面试题文档中的执行上下文说明
添加deleteCallStack字段记录上下文出栈情况
修改taskName和result字段以更准确描述执行上下文变化

--- a/docs/courses/3.Promise/5.一些面试题.md
+++ b/docs/courses/3.Promise/5.一些面试题.md
@@ -229,7 +229,8 @@ data: {
       codeNumbers: [1,2,3,4,5],
       result: "声明函数 **async1**,未执行,直接跳过",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [1]
     },
     {
       id: 2,
@@ -240,7 +241,8 @@ data: {
       codeNumbers: [7,8,9,10,11,12,13,14],
       result: "声明函数 **async2**,未执行,直接跳过",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [2]
     },
     {
       id: 3,
@@ -251,7 +253,8 @@ data: {
       codeNumbers: [16,17,18,19,20],
       result: "声明函数 **async3**,未执行,直接跳过",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [3]
     },
     {
       id: 4,
@@ -262,18 +265,20 @@ data: {
       codeNumbers: [22],
       result: "这是第一个同步执行的代码，直接输出到控制台<br>输出结果: 6",
       console: "6",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [4]
     },
     {
       id: 5,
       type: "synchronous",
       task: "调用async1函数",
-      taskName: "async1()",
+      taskName: "async1()上下文",
       createTask: {},
       codeNumbers: [23],
-      result: "调用 **async1** 函数，进入函数执行<br>async1是一个async函数，返回一个Promise",
+      result: "调用 **async1** 函数，进入函数执行，`async1()上下文`入栈<br>async1是一个async函数，返回一个Promise",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: []
     },
     {
       id: 6,
@@ -284,18 +289,20 @@ data: {
       codeNumbers: [2],
       result: "执行 **async1** 函数内的第一行代码`console.log(1);`,这是同步代码，立即执行<br>输出结果: 1",
       console: "1",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [6]
     },
     {
       id: 7,
       type: "synchronous",
       task: "调用async2函数",
-      taskName: "await async2()",
+      taskName: "async2()上下文",
       createTask: {},
       codeNumbers: [3],
-      result: "遇到 **await async2()**，调用 `async2` 函数<br>`await`会暂停`async1`函数的执行，等待`async2`返回的**Promise**解决",
+      result: "调用 `async2` 函数，`async2()上下文`入栈，<br>遇到 **await**`await`会暂停`async1`函数的执行，等待`async2`返回的**Promise**解决",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: []
     },
     {
       id: 8,
@@ -309,7 +316,8 @@ data: {
       codeNumbers: [8,9,10,11,12,13],
       result: "在 `async2` 函数中遇到 `await setTimeout`,执行`setTimeout(延时回调,0)`,返回一个延时器id<br>setTimeout是一个宏任务，0秒后把回调放入延时队列<br>创建任务 `setTimeout回调` 到延时队列",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [8]
     },
     {
       id: 9,
@@ -321,9 +329,10 @@ data: {
         taskId: 14,
       },
       codeNumbers: [8,9,10,11,12,13],
-      result: "await等待的一定是一个Promise,所以会包装成`await Promise.resolve(延时器id)`,`Promise.resolve(延时器id)`已经完成,把后续代码推入微队列,如果没有后续,这把函数执行结束推到微队列<br>创建任务 `async2执行结束` 到微队列",
+      result: "await等待的一定是一个Promise，所以会包装成`await Promise.resolve(延时器id)`，`Promise.resolve(延时器id)`已经完成，把后续代码推入微队列，如果没有后续，这把函数执行结束推到微队列<br>此时`async2`执行结束，`async2()上下文`出栈<br>创建任务 `async2执行结束` 到微队列",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [7,9]
     },
     {
       id: 10,
@@ -332,9 +341,10 @@ data: {
       taskName: "回到async1内",
       createTask: {},
       codeNumbers: [3],
-      result: "async2返回的promise还未完成,还在微队列:`async2执行结束`,继续等待,`async1`运行结束，继续后续同步代码",
+      result: "async2返回的promise还未完成，还在微队列:`async2执行结束`，继续等待，`async1`运行结束，继续后续同步代码",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [10]
     },
     {
       id: 11,
@@ -345,7 +355,8 @@ data: {
       codeNumbers: [24],
       result: "这是一个同步执行的代码，直接输出到控制台<br>输出结果: 7",
       console: "7",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [11]
     },
     {
       id: 12,
@@ -359,7 +370,8 @@ data: {
       codeNumbers: [25],
       result: "调用 `async3` 函数,`async3`是一个async函数，返回一个Promise<br>在async3函数中，Promise.resolve().then回调会被放入微任务队列<br>创建任务 `async3-log(5)` 到微队列",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [12]
     },
     {
       id: 13,
@@ -370,7 +382,8 @@ data: {
       codeNumbers: [26],
       result: "这是一个同步执行的代码，直接输出到控制台，执行完毕后，同步代码执行结束<br>输出结果: 7",
       console: "8",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [13]
     },
     {
       id: 14,
@@ -382,9 +395,10 @@ data: {
         taskId: 16,
       },
       codeNumbers: [3],
-      result: "执行微任务队列中的 `async2执行结束`,async2函数执行完毕，返回一个已解决的Promise,async1继续执行，把`console.log(2);`放入微任务队列<br>创建任务 `async1-log(2)` 到微队列",
+      result: "执行微任务队列中的 `async2执行结束`，async2函数执行完毕，返回一个已解决的Promise，继续执行，把`console.log(2);`放入微任务队列<br>此时`async1`执行结束，`async1()上下文`出栈<br>创建任务 `async1-log(2)` 到微队列",
       console: "",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [5,14]
     },
     {
       id: 15,
@@ -395,7 +409,8 @@ data: {
       codeNumbers: [18],
       result: "执行微任务队列中的 **async3-log(5)**，async3函数执行完毕，返回一个已解决的Promise<br>输出结果： 5",
       console: "5",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [15]
     },
     {
       id: 16,
@@ -406,7 +421,8 @@ data: {
       codeNumbers: [4],
       result: "执行微任务队列中的 `async1-log(2)`，<br>输出结果： 2",
       console: "2",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [16]
     },
     {
       id: 17,
@@ -418,9 +434,10 @@ data: {
         taskId: 18,
       },
       codeNumbers: [9,10,11,12],
-      result: "执行延时任务队列中的 `setTimeout回调`，唯一一个被放入宏任务队列的任务<br>，Promise.resolve().then回调会被放入微任务队列<br>创建任务 `async2-timeout-log(3)` 到微队列<br>执行后续代码`console.log(4);`<br>输出结果： 4",
+      result: "执行延时任务队列中的 `setTimeout回调`，唯一一个被放入宏任务队列的任务，Promise.resolve().then回调会被放入微任务队列<br>创建任务 `async2-timeout-log(3)` 到微队列<br>执行后续代码`console.log(4);`<br>输出结果： 4",
       console: "4",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [17]
     },
     {
       id: 18,
@@ -428,10 +445,11 @@ data: {
       task: "执行微任务：async2-timeout-log(3)",
       taskName: "async2-timeout-log(3)",
       createTask: {},
-      codeNumbers: [9],
+      codeNumbers: [10],
       result: "执行微任务队列中的 **async2-timeout-log(3)**微队列清空，所有任务执行完毕<br>输出结果： 3",
       console: "3",
-      runTime: 2000
+      runTime: 2000,
+      deleteCallStack: [18]
     }
   ]
 }
