--- a/docs/courses/3.Promise/2.方法详解.md
+++ b/docs/courses/3.Promise/2.方法详解.md
@@ -8,7 +8,9 @@ date: 2025-09-26 20:23:45
 
 除了基本的`then()`和`catch()`方法外，Promise 还提供了其他一些实用的静态方法和实例方法，这些方法可以帮助我们更灵活地处理异步操作。
 
-## Promise.resolve() {#Promise.resolve}
+## 静态方法
+
+### Promise.resolve() {#Promise.resolve}
 
 `Promise.resolve()`方法返回一个以给定值解析后的 Promise 对象。如果这个值是一个 Promise，那么将返回这个 Promise；如果这个值是 thenable（即带有`then`方法），Promise 会执行它的 then 方法；否则返回的 Promise 会以这个值兑现。
 
@@ -36,7 +38,7 @@ const promise3 = Promise.resolve(thenable);
 promise3.then((value) => console.log(value)); // 输出: 这是一个thenable对象
 ```
 
-## Promise.reject() {#Promise.reject}
+### Promise.reject() {#Promise.reject}
 
 `Promise.reject()`方法返回一个带有拒绝原因的 Promise 对象。
 
@@ -51,7 +53,7 @@ const promise2 = new Promise((resolve, reject) => {
 promise2.catch((error) => console.log(error.message)); // 输出: 出错了
 ```
 
-## Promise.all() {#Promise.all}
+### Promise.all() {#Promise.all}
 
 `Promise.all()`方法接收一个 Promise 可迭代对象（通常是数组），并返回一个新的 Promise。当所有的 Promise 都成功解决时，返回的 Promise 才会解决，解决值是一个包含所有 Promise 解决值的数组。只要有任何一个 Promise 被拒绝，返回的 Promise 就会被拒绝，拒绝原因是第一个被拒绝的 Promise 的拒绝原因。
 
@@ -83,7 +85,7 @@ Promise.all([promise4, promise5, promise6])
   });
 ```
 
-## Promise.allSettled() {#Promise.allSettled}
+### Promise.allSettled() {#Promise.allSettled}
 
 `Promise.allSettled()`方法返回一个在所有给定的 Promise 都已经解决或拒绝后解决（settled）的 Promise，并带有一个对象数组，每个对象表示对应的 Promise 结果。
 
@@ -109,7 +111,7 @@ Promise 2 失败: 失败
 */
 ```
 
-## Promise.race() {#Promise.race}
+### Promise.race() {#Promise.race}
 
 `Promise.race()`方法返回一个 Promise，一旦迭代器中的某个 Promise 解决或拒绝，返回的 Promise 就会解决或拒绝。
 
@@ -135,7 +137,7 @@ fetchWithTimeout('/api/data')
   .catch((error) => console.error('错误:', error.message));
 ```
 
-## Promise.any() {#Promise.any}
+### Promise.any() {#Promise.any}
 
 `Promise.any()`方法接收一个 Promise 可迭代对象，只要其中的任何一个 Promise 成功，就返回那个成功的 Promise 的值。如果所有 Promise 都失败，则返回一个失败的 Promise 和 AggregateError 对象（包含所有失败信息）。
 
@@ -162,7 +164,7 @@ Promise.any([promise1, promise2])
   });
 ```
 
-## Promise.withResolvers() {#Promise.withResolvers}
+### Promise.withResolvers() {#Promise.withResolvers}
 
 这是一个较新的方法（ES2023），它创建了一个 Promise 对象和两个函数：一个用于解决 Promise，一个用于拒绝 Promise。
 
@@ -194,7 +196,48 @@ promise2.then((value) => {
 });
 ```
 
-## 实例方法：Promise.prototype.finally() {#Promise.prototype.finally}
+## 实例方法
+
+### Promise.prototype.then() {#Promise.prototype.then}
+
+`then()`方法是 Promise 的核心方法，用于注册 Promise 解决和拒绝时的回调函数。它返回一个新的 Promise，允许链式调用。
+
+```javascript
+const promise = new Promise((resolve) => {
+  setTimeout(() => resolve('成功'), 1000);
+});
+
+promise
+  .then((value) => {
+    console.log(value); // 输出: "成功"
+    return value + ' - 处理后';
+  })
+  .then((newValue) => {
+    console.log(newValue); // 输出: "成功 - 处理后"
+  });
+```
+
+### Promise.prototype.catch() {#Promise.prototype.catch}
+
+`catch()`方法是`then(undefined, onRejected)`的语法糖，专门用于处理 Promise 被拒绝的情况。
+
+```javascript
+// 使用catch
+fetch('/api/data')
+  .then((response) => response.json())
+  .catch((error) => {
+    console.error('请求失败:', error);
+  });
+
+// 等同于
+fetch('/api/data')
+  .then((response) => response.json())
+  .then(undefined, (error) => {
+    console.error('请求失败:', error);
+  });
+```
+
+### Promise.prototype.finally() {#Promise.prototype.finally}
 
 `finally()`方法在 Promise 结束时，无论结果是 fulfilled 还是 rejected，都会执行指定的回调函数。它返回一个 Promise，其行为与原 Promise 基本一致，但在原 Promise 解决后执行回调。通常用于清理操作，如隐藏加载指示器。
 
@@ -251,45 +294,6 @@ Promise.resolve('成功')
   });
 ```
 
-## 实例方法：Promise.prototype.catch() {#Promise.prototype.catch}
-
-`catch()`方法是`then(undefined, onRejected)`的语法糖，专门用于处理 Promise 被拒绝的情况。
-
-```javascript
-// 使用catch
-fetch('/api/data')
-  .then((response) => response.json())
-  .catch((error) => {
-    console.error('请求失败:', error);
-  });
-
-// 等同于
-fetch('/api/data')
-  .then((response) => response.json())
-  .then(undefined, (error) => {
-    console.error('请求失败:', error);
-  });
-```
-
-## 实例方法：Promise.prototype.then() {#Promise.prototype.then}
-
-`then()`方法是 Promise 的核心方法，用于注册 Promise 解决和拒绝时的回调函数。它返回一个新的 Promise，允许链式调用。
-
-```javascript
-const promise = new Promise((resolve) => {
-  setTimeout(() => resolve('成功'), 1000);
-});
-
-promise
-  .then((value) => {
-    console.log(value); // 输出: "成功"
-    return value + ' - 处理后';
-  })
-  .then((newValue) => {
-    console.log(newValue); // 输出: "成功 - 处理后"
-  });
-```
-
 ## 实际应用场景 {#实际应用场景}
 
 1. **并发请求处理**
@@ -333,6 +337,7 @@ promise
    ```
 
 4. **批量处理与错误收集**
+
    ```javascript
    // 使用Promise.allSettled处理批量操作，收集所有错误
    async function processBatch(items, processor) {
