--- a/docs/courses/3.Promise/3.链式调用.md
+++ b/docs/courses/3.Promise/3.链式调用.md
@@ -4,7 +4,7 @@ title: Promise的链式调用
 date: 2025-09-26 22:01:22
 ---
 
-# Promise 的链式调用和
+# Promise 的链式调用
 
 Promise 的链式调用是其最强大的特性之一，它允许我们以更优雅的方式处理多个连续的异步操作。链式调用的核心在于`then()`方法会返回一个新的 Promise 对象。
 
