docs(Promise): 更新Promise方法文档内容
- 补充Promise规范发展历史说明
- 优化静态方法部分的格式和描述
- 为Promise.resolve和Promise.all添加更清晰的分点说明

--- a/docs/courses/3.Promise/2.方法详解.md
+++ b/docs/courses/3.Promise/2.方法详解.md
@@ -6,13 +6,19 @@ date: 2025-09-26 20:23:45
 
 # Promise 的方法
 
-除了基本的`then()`和`catch()`方法外，Promise 还提供了其他一些实用的静态方法和实例方法，这些方法可以帮助我们更灵活地处理异步操作。
+Promise 规范经历了多个发展阶段，从最初的 Promise/A+社区规范到后来的 ECMAScript 标准。Promise/A+规范主要定义了 Promise 的基本行为和`then()`方法的核心实现，而 ECMAScript 标准在此基础上添加了更多实用的静态方法和实例方法。
+
+除了基本的`then()`方法外，Promise 还提供了其他一些实用的静态方法和实例方法，这些方法可以帮助我们更灵活地处理异步操作。
 
 ## 静态方法
 
 ### Promise.resolve() {#Promise.resolve}
 
-`Promise.resolve()`方法返回一个以给定值解析后的 Promise 对象。如果这个值是一个 Promise，那么将返回这个 Promise；如果这个值是 thenable（即带有`then`方法），Promise 会执行它的 then 方法；否则返回的 Promise 会以这个值兑现。
+`Promise.resolve()`方法返回一个以给定值解析后的 Promise 对象。
+
+- 如果这个值是一个 Promise，那么将返回这个 Promise；
+- 如果这个值是 thenable（即带有`then`方法），Promise 会执行它的 then 方法；
+- 否则返回的 Promise 会以这个值兑现。
 
 ```javascript
 // 1. 传入普通值
@@ -55,7 +61,10 @@ promise2.catch((error) => console.log(error.message)); // 输出: 出错了
 
 ### Promise.all() {#Promise.all}
 
-`Promise.all()`方法接收一个 Promise 可迭代对象（通常是数组），并返回一个新的 Promise。当所有的 Promise 都成功解决时，返回的 Promise 才会解决，解决值是一个包含所有 Promise 解决值的数组。只要有任何一个 Promise 被拒绝，返回的 Promise 就会被拒绝，拒绝原因是第一个被拒绝的 Promise 的拒绝原因。
+`Promise.all()`方法接收一个 Promise 可迭代对象（通常是数组），并返回一个新的 Promise。
+
+- 所有 Promise 成功解决时返回包含所有解决值的数组
+- 任一 Promise 被拒绝时立即拒绝，拒绝原因为第一个被拒绝的 Promise 的拒绝原因
 
 ```javascript
 // 所有Promise都成功
