fix(Promise): 修正then方法中未使用this访问_solvedCallbacks的问题

--- a/docs/courses/3.Promise/6.手写Promise.md
+++ b/docs/courses/3.Promise/6.手写Promise.md
@@ -258,7 +258,7 @@ class MyPromise {
   then(onFulfilled, onRejected) {
     // 创建一个新的 Promise 对象，用于返回
     const promise2 = new MyPromise((resolve, reject) => {});
-    _settledCallbacks.push({
+    this._settledCallbacks.push({
       onFulfilled,
       onRejected,
       promise2 // 后续处理的 Promise 实例
@@ -354,7 +354,7 @@ class MyPromise {
   then(onFulfilled, onRejected) {
     // 创建一个新的 Promise 对象，用于返回
     const promise2 = new MyPromise((resolve, reject) => {});
-    _settledCallbacks.push({
+    this._settledCallbacks.push({
       onFulfilled,
       onRejected,
       promise2 // 后续处理的 Promise 实例
@@ -610,7 +610,7 @@ class MyPromise {
   then(onFulfilled, onRejected) {
     // 创建一个新的 Promise 对象，用于返回
     const promise2 = new MyPromise((resolve, reject) => {});
-    _settledCallbacks.push({
+    this._settledCallbacks.push({
       onFulfilled,
       onRejected,
       promise2 // 后续处理的 Promise 实例
